--- a/face_linebot_.ipynb
+++ b/face_linebot_.ipynb
@@ -43,13 +43,15 @@
     "def callback():\n",
     "    signature = request.headers['X-Line-Signature']\n",
     "    body = request.get_data(as_text=True)\n",
-    "    app.logger.info(f\"Request body: {body}\")\n",
-    "\n",
     "    try:\n",
     "        handler.handle(body, signature)\n",
+    "        return '', 200  # 確保總是返回 200 狀態碼\n",
     "    except InvalidSignatureError:\n",
     "        abort(400)\n",
-    "    return 'OK'\n",
+    "    except Exception as e:\n",
+    "        app.logger.error(f\"Error handling request: {e}\")\n",
+    "        return '', 500\n",
+    "\n",
     "\n",
     "@handler.add(MessageEvent, message=ImageMessage)\n",
     "def handle_image_message(event):\n",
